--- a/.github/workflows/pytest.yml
+++ b/.github/workflows/pytest.yml
@@ -1,5 +1,11 @@
 name: pytest
-on: workflow_dispatch
+on: 
+  push: 
+    branches:
+      - 'main'
+  pull_request:
+    types: [opened]
+  workflow_dispatch:
 
 jobs:
   pytest:
